--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    color: white;
+    color: darkgray;
     background-color: #191919;
 }
 
