--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+li {
+    transition: transform 0.3s ease; /* smooth transition */
+  }
+  
+
 body {
     font-family: Arial, sans-serif;
     text-align: center;
