--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ button:hover {
 
 /* When the drag handle is hovered */
 .drag-handle:hover {
-    background-color: gray;
+    /* background-color: gray; */
     border-radius: 5px;
 }
 
@@ -192,3 +192,4 @@ li.dragging {
 li span, li button {
     margin-left: 10px;
 }
+
