--- a/styles.css
+++ b/styles.css
@@ -308,3 +308,32 @@ body.task-checked {
         background-position: 0% 50%;
     }
 }
+
+/* Styling for the priority dropdown */
+select#priority-input {
+    background-color: #fff;
+    color: #333;
+    font-size: 20px;
+    border-radius: 30px;
+    padding: 15px 30px;
+    cursor: pointer;
+    margin: 15px;
+    font-family: 'Courier New', Courier, monospace;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Set the background color for each priority option */
+select#priority-input option[value="Critical"] {
+    background-color: #F15B5B; /* Red background for critical */
+    color: black; /* Black text */
+}
+
+select#priority-input option[value="Normal"] {
+    background-color: #F2D35F; /* Yellow background for normal */
+    color: black; /* Black text */
+}
+
+select#priority-input option[value="Low"] {
+    background-color: #60B83F; /* Green background for low */
+    color: black; /* Black text */
+}
